# par_exec

./: Cargo.toml  mod.rs  par.rs  seq.rs
src/: empty.rs  lib.rs  par.rs  seq.rs
