[package]
name = "par_exec"
version = "0.1.10"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Simple generic parallel executor with MapReduce style."
license = "MIT"
keywords = ["executor", "parallel", "thread", "threads", "threadpool", "mapreduce"]

[dev-dependencies]
rand = "0.3"
itertools = "0.4"

[dependencies]
num_cpus = "0.2"
